package print_consola;

public class menu {

    public void menuPrincipal() {
        System.out.println("🌟  Bienvenido a tu aplicación de ahorro personales KatGoal");
        System.out.println("   1. Metas");
        System.out.println("   2. Cuentas");
        System.out.println("   0. Salir");
    }

    public void menuMetas() {
        System.out.println("📌  Menú de Metas");
        System.out.println("   1. Agregar Meta");
        System.out.println("   2. Mostrar Metas");
        System.out.println("   3. Eliminar Meta");
        System.out.println("   4. Actualizar Meta");
        System.out.println("   5. Agregar monto a Meta");
        System.out.println("   0. Volver al Menú Principal");
    }

    public void menuCuentas() {
        System.out.println("🏦  Menú de Cuentas");
        System.out.println("   1. Agregar Cuenta");
        System.out.println("   2. Mostrar Cuentas");
        System.out.println("   3. Eliminar Cuenta");
        System.out.println("   4. Actualizar Cuenta");
        System.out.println("   0. Volver al Menú Principal");
    }

}
