classDiagram
    class App {
        +main(String[] args)
    }
    class menu {
        +menuPrincipal()
        +menuMetas()
        +menuCuentas()
    }
    class validar {
        +validarOpcion(String mensaje,int min,int max)
        +validarMonto(String mensaje)
        +descripcionMeta(String mensaje)
        +validarIcono(String mensaje)
    }
    class Ahorros {
        -List~Meta~ metas
        -List~Cuenta~ cuentas
        +agregarMeta(Meta)
        +crearMeta(String,int,char)
        +obtenerMeta(String)
        +actualizarMeta(String,int)
        +mostrarMetas()
        +agregarMontoAMeta(String,int,int)
        +crearCuenta(int,int,String)
        +mostrarCuentas()
    }
    class Meta {
        -descripcion : String
        -monto_deseado : int
        -icono : char
        -estado : String
        -monto_agregado : int
    }
    class MetaCorta
    class MetaLarga
    class Cuenta {
        -saldo : int
        -numero_cuenta : int
        -nombre_titular : String
    }
    class CuentaAhorros

    App --> menu : usa
    App --> validar : usa
    App --> Ahorros : usa
    Ahorros "1" o-- "*" Meta : contiene
    Ahorros "1" o-- "*" Cuenta : contiene
    Meta <|-- MetaCorta
    Meta <|-- MetaLarga
    Cuenta <|-- CuentaAhorros
